--- a/public/assets/css/style-config-gerais.css
+++ b/public/assets/css/style-config-gerais.css
@@ -45,7 +45,13 @@
     padding: 10px;
     background-color: rgb(246, 246, 246);
     border-radius: 20px;
+    transition: all 0.2s ease-in-out;
+    margin-bottom: 20px;
     
+}
+.cont-config-gerais .cont-item-config .card-config:hover{
+    margin-bottom: 30px;
+    transform: scale(1.05);
 }
 .cont-config-gerais .cont-item-config .card-config a{
     text-decoration: none;
@@ -60,4 +66,59 @@
     margin-right: 20px;
     border-radius: 50%;
 }
-.cont-config-gerais .cont-item-config .card-config
+.cont-config-gerais .cont-item-config .card-config .cont-desc-config{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
+
+.cont-config-gerais .cont-item-config .card-config .cont-desc-config small{
+    font-family: 'Fredoka';
+    font-weight: normal;
+    color: #003366;
+    text-align: center;
+    justify-content: start;
+}
+.cont-config-gerais .cont-item-config .card-config .cont-desc-config h6{
+    font-family: 'Inter';
+    color: #003366;
+    text-align: center;
+    justify-content: start;
+}
+
+.cont-logout{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.cont-logout form{
+    display: flex;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cont-logout form input[type="submit"]{
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: #ff85ab;
+    font-family: 'Fredoka';
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 20px;
+}
+
+.cont-logout form input[type="submit"]:hover{
+    background-color: #dc437b;
+    transform: scale(1.04);
+}
