--- a/public/assets/css/style-modal-post.css
+++ b/public/assets/css/style-modal-post.css
@@ -115,7 +115,7 @@
     
 }
 
-.modal-post form .cont-img-post .input-group .btnImg{
+.modal-post form .cont-img-post .input-group .btnImg, .modal-post form .cont-btn-criar-post button{
     justify-content: center;
     align-items: center;
     width: 40%;
@@ -130,7 +130,7 @@
     transition: all 0.3s ease;
     margin-top: 20px;
 }
-.modal-post form .cont-img-post .input-group .btnImg:hover{
+.modal-post form .cont-img-post .input-group .btnImg:hover, .modal-post form .cont-btn-criar-post button:hover{
     background-color: #cc5379;
     transform: scale(1.05);
 }
@@ -194,9 +194,65 @@
     border-radius: 10px ;
     transition: all 0.3s ease;
     font-size: 15px;
+    resize: none;
 }
 .modal-post form textarea:focus{
     border: 4px solid #F26699;
     transform: scale(1.04);
     outline:none;
+}
+
+.modal-post form .cont-categoria{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3,2fr);
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.modal-post form .cont-categoria label{
+    min-width: 20%;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #7a7879;
+    font-family: 'Inter';
+    color: white;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 10px;
+   
+}
+.modal-post form .cont-categoria .label-checkbox:hover{
+    background-color:#7a7879 ;
+    transform: scale(1.05);
+}
+.modal-post form .cont-categoria .label-active{
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: #ff85ab;
+    font-family: 'Inter';
+    color: white;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 20px;
+}
+.modal-post form .cont-categoria input[type='checkbox']{
+    display: none;
+}
+.modal-post form .cont-btn-criar-post{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
