--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -122,7 +122,6 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-   
     justify-content: center;
 }
 
@@ -149,8 +148,9 @@ form .input-group {
     display: flex;
     flex-direction: column;
     position: relative;
-    min-height: 20px;
+    min-height: 60px;
     margin-top: 15px;
+    width: 100%;
 }
 
 
@@ -204,7 +204,6 @@ input:focus, input:valid{
 
 form .regras-senha{
     position: relative;
-    
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
