--- a/public/assets/css/style-perfil.css
+++ b/public/assets/css/style-perfil.css
@@ -7,209 +7,130 @@
     font-family: "Inter";
     src: url('../fonts/Inter-VariableFont_opsz,wght.ttf');
 }
-.cont-feed{
-    display: flex;
-    width: 100%;
-   flex-direction: row;
-    height: 100%;
-    margin-top: 10px;
-    background-color: white;
-    
-}
-.cont-post{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
+.body {
+    background-color: #fafafa;
+  }
+  
+  
+  .nav-container {
+    padding-left: 25% !important; 
+    padding-right: 25% !important;
+  }
+  
+  @media screen and (max-width: 1605px) {
+    .nav-container {
+        padding-left: 20% !important; 
+        padding-right: 20% !important;
+    }
+  }
+  
+  @media screen and (max-width: 992px) {
+    .nav-container {
+        padding-left: 5% !important; 
+        padding-right: 5% !important;
+    }
+  }
+  
+  .img-nav {
+    border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%; 
+    max-width:30px; 
+    max-height:25px;
+  }
+  
+  .img-profile {
+    border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%; 
+    width:200px; 
+    height:200px;
+    object-fit: cover;
+  }
+  
+  .username {
+    font-weight: 300; font-size: 28px;
+  }
+  
+  .name {
+    font-size: 16px; display: inline; font-weight: 600 !important;
+  }
+  
+  .profile-datas {
+    font-size: 16px;
+  }
+  
+  .profile-desc {
+    font-size: 16px; 
+  }
+  
+  .nav-feed {
+    border-bottom: none !important; 
+    display:flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    background-color: white;
-}
-.card-post{
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    padding: 10px 10px;
-}
-.card-post .post-head{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: start;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.card-post .post-head img{
-    width: 10%;
-    border-radius: 50%;
-    margin-right: 5px;
-}
-.card-post .post-head small{
-    font-family: "Inter";
-    font-weight: bold;
-}
-.card-post .conteudo-post{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-.card-post .conteudo-post .cont-arquivo{
-    display: flex;
-    width: 100%;
-    margin-bottom: 10px;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-}
-.card-post .conteudo-post .cont-arquivo img{
-    width: 100%;
-}
-
-.card-post .conteudo-post .cont-icons {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    width: 100%;
-}
-.card-post .conteudo-post .cont-icons button{
-    outline: none;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-.card-post .conteudo-post .cont-icons .icons-principais{
-    display: flex;
-    width: 30%;
-    flex-direction: row;
-    justify-content: center;
-    justify-content: start;
-    gap: 20px;
-    align-items: start;
-}
-.card-post .conteudo-post .cont-icons .icons-principais i{
-    font-size:20px;
-}
-
-.card-post .conteudo-post .cont-icons .icon-salvos{
-    display: flex;
-    width: 70%;
-    justify-content: end;
-    align-items: end;
-}
-.card-post .conteudo-post .cont-icons .icon-salvos i{
-    font-size:20px;
-}
-.card-post .conteudo-post .cont-legenda{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.card-post .conteudo-post .cont-legendenda small{
-    font-family: 'Inter';
-    font-weight: bolder;
-}
-.card-post span{
-    font-family: 'Inter';
-    font-weight: normal;
-}
-.card-post .conteudo-post .cont-num-comentarios{
-    display: flex;
-    width: 100%;
-    justify-content: start;
-    align-items: center;
-}
-.card-post .conteudo-post .cont-num-comentarios small{
-    font-family: 'Inter';
-    color: rgb(118, 118, 118);
-}
-
-/*Parte de Tranding*/
-
-.cont-tipo-feed{
-   
-    display: flex;
-    flex-direction: column;
-    width: 40% ;
-    min-height: 100vh;
-    justify-content: start;
-    align-items: center;
-    padding: 20px;
-    border-left: 1px rgba(0, 0, 0, 0.077) solid;
-}
-
-.cont-tipo-feed .cont-link-feed{
-    display: flex;
-    flex-direction: row;
-    width: 50%;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.cont-tipo-feed .cont-link-feed a{
-    text-decoration: none;
-    color: #f26699;
-    font-weight: bold;
-    text-align: center;
-    font-family: "Inter";
-    transition: all 0.2s ease-in-out;
-}
-.cont-tipo-feed .cont-link-feed a:hover{
-    color: #be255d;
-    transform: scale(1.04);
-    text-decoration: underline ;
-}
-.cont-tipo-feed .cont-assuntos{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    align-items: end;
-    justify-content: end;
-}
-.cont-tipo-feed .cont-assuntos h5{
-    font-family: 'Inter';
-    text-align: center;
-    color: rgb(207, 207, 207);
-    font-size: 14px;
-}
-.cont-tipo-feed .cont-assuntos .card-assunto{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 80px;
-    background-color: rgb(246, 246, 246);
-    box-shadow: 0px 21px 17px -9px rgba(0,0,0,0.46);
-    -webkit-box-shadow: 0px 21px 17px -9px rgba(0,0,0,0.46);
-    -moz-box-shadow: 0px 21px 17px -9px rgba(0,0,0,0.46);
-    transition: 0.5s ease-in-out;
-    margin-top: 10px;
-    border-radius: 20px 0px 2px 20px / 20px 0px 2px 20px;
-    transition: 0.5s ease-in-out;
-    padding: 20px;
-    cursor: pointer;
-}
-.cont-tipo-feed .cont-assuntos .card-assunto:hover{
-    margin-bottom: 10px;
-    transform: scale(1.05);
-}
-.cont-tipo-feed .cont-assuntos .card-assunto h4{
-    
-    font-family: 'Inter';
-    color: black;
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.cont-tipo-feed .cont-assuntos .card-assunto i{
-    font-size: 20px;
-}
+    padding-bottom: 15px;
+  }
+  
+  .nav-link-1 {
+    color: #495057;
+    background-color: #fafafa !important;
+    border-color: gray #fff #fff !important;
+    border-top-right-radius: .0rem !important;
+    border-top-left-radius: .0rem !important;
+    font-size: 12px;
+    font-weight: 600;
+  }
+  
+  .nav-link-2 {
+    color: #a2a8af;
+    background-color: #fafafa !important;
+    border-color: #fff #fff #fff !important;
+    border-top-right-radius: .0rem !important;
+    border-top-left-radius: .0rem !important;
+    font-size: 12px;
+    font-weight: 600;
+  }
+  
+  
+  .card {
+    border: 0px solid rgba(0,0,0,.125) !important;
+    border-radius: .0rem !important;
+  }
+  
+  .card .card-img, .card-img-top {
+    border-top-left-radius: 0rem !important;
+    border-top-right-radius: 0rem !important;
+  }
+  
+  .stories{
+    text-align:center;
+    font-size: 15px;
+    font-weight: 600;
+  }
+  
+  .form-control {
+    border-radius: .15rem !important;
+    padding: 0% !important; 
+    background-color: #fafafa !important; 
+    text-align: center; 
+    font-size: 15px !important;
+  }
+  
+  .icons {
+    padding: 4%; 
+    font-size: 25px;
+  }
+  
+  .button-edit {
+    color: black !important;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    border-color: #dae1e7 !important;
+  }
+  
+  .btn {
+    padding: .100rem .50rem !important;
+  }
